Project re-indexing logic refactoring to batch processing